# easy-expense

./: README.md  docker-compose.yml
app/: Dockerfile  alembic.ini  main.py  pyproject.toml
app/core/: config.py
app/database/: base.py  base_class.py  deps.py  session.py
app/migrations/: env.py
app/migrations/versions/: 4041da0e480f_create_initial_tables.py  65765132735f_initial_tables.py  989a09debd5a_add_user_and_expense.py  9fc6a87f251f_add_income_table.py
app/repository/: base_crud.py  user.py
app/router/: api.py
app/src/endpoints/v1/: users.py
app/src/models/: expense.py  income.py  user.py
app/src/schemas/: user.py
